# RUST_examples

./: .gitignore  README.md
.skills/: skills.md  windows-colored-console.md
Temperature_Converter/: Cargo.toml
Temperature_Converter/src/: main.rs
backup_1c/: Cargo.toml
backup_1c/src/: main.rs
docs/: tauri-new-app-deployment.md
scripts/: set-android-env.ps1
sctring_counter/: Cargo.toml
sctring_counter/src/: main.rs
svg_layer_splitter/: Cargo.toml
svg_layer_splitter/src/: main.rs
test-makepad/: Cargo.toml
test-makepad/src/: main.rs
test-tauri/: README.md  index.html  package-lock.json  package.json
test-tauri/src/: main.ts  styles.css
test-tauri/src-tauri/: Cargo.toml  tauri.conf.json
test_GPUI/: Cargo.toml
test_GPUI/src/: main.rs
test_tauri_android_modbus/: README.md  package-lock.json  package.json
test_tauri_android_modbus/src/: App.vue
test_tauri_android_modbus/src-tauri/: Cargo.toml  tauri.conf.json
test_tauri_android_modbus/src-tauri/src/: lib.rs  main.rs
