[package]
name = "backup_1c"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
colored = "3"
fs_extra = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "handleapi"] }
